HW12 is completed

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,9 +5,14 @@ linters:
   disable-all: false
   enable-all: true
   disable:
+    - gci
+    - goerr113
     - gochecknoglobals
     - gochecknoinits
     - godox
+    - gofumpt
+    - gomnd
     - lll
     - nakedret
+    - nlreturn
     - wsl
