--- a/hw12_13_14_15_calendar/Makefile
+++ b/hw12_13_14_15_calendar/Makefile
@@ -1,10 +1,16 @@
 build:
-	go build ./... -o calendar
+	go build -o ./bin/calendar ./cmd/calendar
 
 test:
-	go test -race ./...
+	go test -race ./internal/... ./pkg/...
 
-lint:
+install-lint-deps:
+	(which golangci-lint > /dev/null) || curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.30.0
+
+lint: install-lint-deps
+	gofumpt -s -w .
 	golangci-lint run ./...
 
-.PHONY: build
+test-db:
+	./scripts/db-dev.sh
+.PHONY: build test lint
